--- a/css/index.css
+++ b/css/index.css
@@ -251,7 +251,7 @@
     background-image: url(../assets/imgs/barra.jpg);
     background-size: cover;
     background-attachment:fixed;
-
+    padding: 4em 0;
     display: flex;
     align-items: center;
     justify-content: center; 
